--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -13,7 +13,8 @@
                             <h:panelGrid columns="1" >
                                 <p:panel header="Stock Reports" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid columns="1" styleClass="alignTop">
-                                        <p:commandButton styleClass="linkButton" value="Stock Report by Batch" action="pharmacy_report_department_stock_by_batch" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Stock Report by Batch" action="pharmacy_report_department_stock_by_batch" ajax="false" ></p:commandButton> 
+                                        <p:commandButton styleClass="linkButton" value="Stock Report by Batch(To Export)" action="pharmacy_report_department" ajax="false" ></p:commandButton> 
                                         <p:commandButton styleClass="linkButton" value="Stock Report by Expiry" action="pharmacy_report_department_stock_by_batch_expiary" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Stock Report by Item" action="pharmacy_report_department_stock_by_item" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Stock Report by Product" action="pharmacy_report_department_stock_by_product" ajax="false" ></p:commandButton>
