--- a/src/main/webapp/hr/hr_staff_admin.xhtml
+++ b/src/main/webapp/hr/hr_staff_admin.xhtml
@@ -106,7 +106,7 @@
                                             <p:inputText autocomplete="off"  value="#{staffController.current.person.lastName}"   styleClass="longText"/>
 
                                             <p:outputLabel  value="NIC No" ></p:outputLabel>
-                                            <p:inputMask mask="999999999V" value="#{staffController.current.person.nic}" />
+                                            <p:inputText autocomplete="off" value="#{staffController.current.person.nic}" />
 
                                             <p:outputLabel  value="Address" ></p:outputLabel>
                                             <p:inputTextarea  value="#{staffController.current.person.address}"  styleClass="longText"  />
