--- a/src/main/webapp/pharmacy/pharmacy_report_department.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_department.xhtml
@@ -160,7 +160,7 @@
                                         <h:outputLabel value="Expiry"/>                                     
                                     </f:facet>
                                     <h:outputLabel value="#{i.itemBatch.dateOfExpire}"  >
-                                        <f:convertDateTime pattern="dd MMM yy" ></f:convertDateTime>
+                                        <f:convertDateTime pattern="M/d/yyyy" ></f:convertDateTime>
                                     </h:outputLabel>
                                 </p:column>
 
