--- a/src/main/webapp/hr/hr_report_staff_epf_etf.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_epf_etf.xhtml
@@ -69,7 +69,7 @@
                         <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder">                     
                             <p:dataTable id="tb1" value="#{hrReportController.staffSalarys}" var="ss">
                                 <f:facet name="header">
-                                    <h:outputLabel value="Employee ETF Report"/>
+                                    <h:outputLabel value="Employee EPF Report"/>
                                     <br/>
                                     <h:panelGroup rendered="#{hrReportController.reportKeyWord.institution ne null}" >
                                         <h:outputLabel value="#{hrReportController.reportKeyWord.institution.name}" />
