Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/hr/hr_report_staff_epf_etf_1.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_epf_etf_1.xhtml
@@ -176,7 +176,7 @@
                                         <f:convertNumber pattern="0.00" />
                                     </p:outputLabel> 
                                     <f:facet name="footer">
-                                        <p:outputLabel value="#{hrReportController.totalBasicValue}">
+                                        <p:outputLabel value="#{hrReportController.totalTransEpfEtfDiductableSalary}">
                                             <f:convertNumber pattern="0.00" />
                                         </p:outputLabel> 
                                     </f:facet>
