Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -76,6 +76,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Specility Wise Channel Appoinment Total And Count(10 &amp; 11)" action="/channel/channel_report_specility_month_count"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel &amp; Scan Count(41)" action="/channel/channel_report_scan_channel_count"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Patient Count()" action="/channel/channel_report_staff_wise_patient_count"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="BTT" action="/channel/channel_doctor_view_today_all"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
