--- a/src/main/webapp/inward/inward_reports.xhtml
+++ b/src/main/webapp/inward/inward_reports.xhtml
@@ -127,6 +127,10 @@
                                                  action="discharge_book_no_changes_due"
                                                  actionListener="#{mdInwardReportController.makeNull()}" 
                                                  styleClass="linkButton" ajax="false" />
+                                <p:commandButton value="(8)Discharged List and Due Report with Letter"
+                                                 action="discharge_book_no_changes_due_with_letter"
+                                                 actionListener="#{mdInwardReportController.makeNull()}" 
+                                                 styleClass="linkButton" ajax="false" />
 
                                 <!--                                <p:commandButton rendered="false" value="(4)Complete  Payment of Not Discharge Patient" action="bht_deposit_by_created_date_discharged_above" 
                                                                                 actionListener="#{mdInwardReportController.makeNull()}" styleClass="linkButton" ajax="false" />
