--- a/src/main/webapp/reportLab/collecting_center_report_history_1.xhtml
+++ b/src/main/webapp/reportLab/collecting_center_report_history_1.xhtml
@@ -15,10 +15,10 @@
             <p:panel header="Statement Of Agent Account">
                 <f:facet name="header">
                     <p:outputLabel value="Statement Of Agent Account" />
-<!--                    <p:commandButton id="btnBack" value="Back" 
-                                     action="/channel/channel_reports" style="float: right;"
-                                     ajax="false">
-                    </p:commandButton>-->
+                    <!--                    <p:commandButton id="btnBack" value="Back" 
+                                                         action="/channel/channel_reports" style="float: right;"
+                                                         ajax="false">
+                                        </p:commandButton>-->
                 </f:facet>
 
                 <p:panel>
@@ -35,11 +35,14 @@
                             <p:column>#{ix.institutionCode}</p:column>
                             <p:column>#{ix.name}</p:column>
                         </p:autoComplete>
-                        
+
                         <p:commandButton action="#{channelReportController.createCollectingCenterHistorySubTable}" value="Fill" ajax="false" ></p:commandButton> 
                         <h:panelGrid columns="2">
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                                 <p:printer target="reportPrint"  />
+                            </p:commandButton>
+                            <p:commandButton  ajax="false" value="Excel" styleClass="noPrintButton" >
+                                <pe:exporter type="xlsx" target="tbl1" fileName="channel_report_agent_balance" subTable="true" />
                             </p:commandButton>
                         </h:panelGrid>
                     </h:panelGrid> 
